--- a/views/pages/index.liquid
+++ b/views/pages/index.liquid
@@ -17,4 +17,5 @@
 <script src="js/products.js"></script>
 <script src="js/faqs.js"></script>
 <script src="js/contact.js"></script>
+<script src="js/accessibility-issues.js"></script>
 {% endblock%}
