--- a/views/components/header.liquid
+++ b/views/components/header.liquid
@@ -16,6 +16,7 @@
                     </svg>
                     <span class="header__button--cart__title js-headerCartTitle">Cart(0)</span>
                 </button>
+                <button class="header__button js-clearCart" type="button" aria-label="Clear Cart">Clear</button>
                 <button class="header__button header__button--menu js-headerButtonMenu" type="button" aria-label="Menu button">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="icon icon-menu" viewBox="0 0 24 24">
                         <path class="menu-line" d="M6 7.875h12"></path>
