--- a/views/main.liquid
+++ b/views/main.liquid
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="/img/favicon.png" type="image/png">
-    
+    <!-- Missing X-Frame-Options / CSP for clickjacking protection -->
 </head>
 
 <body>
@@ -26,6 +26,7 @@
     
     <script src="js/header.js"></script>
     <script src="js/global.js"></script>
+    <script src="js/security-issues.js"></script>
     {% block customJS%}
     {% endblock%}
 </body>
